# xmr-cheque-bot

./: .env.example  .gitignore  ARTIFACTS_DEPLOY_MAINNET.md  ARTIFACTS_M0.md  ARTIFACTS_M1.md  ARTIFACTS_M2.md  ARTIFACTS_M3.md  ARTIFACTS_M4.md  ARTIFACTS_M5.md  DEPLOY-PRODUCTION.md  DEPLOY_HOSTINGER.md  Dockerfile  OPS-PRODUCTION-DEPLOY.md  PROD_READY_TASKS.md  PROJECT_STATUS.md  PROVISIONING-CHECKLIST.md  README.md  REVIEW_DEPLOY_MAINNET.md  REVIEW_M0.md  REVIEW_M1.md  REVIEW_M2.md  REVIEW_M3.md  REVIEW_M4.md  REVIEW_M5.md  UPGRADE-ROLLBACK-RUNBOOK.md  docker-compose.mainnet.yml  docker-compose.production.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
monitoring/: alert-rules.yml  prometheus.yml
src/xmr_cheque_bot/: __init__.py  __main__.py  amount.py  api_two_phase.py  bot.py  bot_handlers_two_phase.py  cheque_limits.py  config.py  encryption.py  i18n.py  i18n_two_phase.py  integration.py  logging.py  monero_rpc.py  payment_monitor.py  payment_monitor_two_phase.py  rates.py  redis_schema.py  redis_schema_two_phase.py  storage.py  storage_two_phase.py  uri_qr.py  validators.py
systemd/: xmr-cheque-bot.service
tests/: test_cheque_creation.py  test_concurrency.py  test_encryption.py  test_i18n.py  test_monero_rpc.py  test_payment_monitor.py  test_redis_schema.py  test_reorg_handling.py  test_storage.py  test_validators.py
